@@ -27,7 +27,7 @@ ARCH_SRC = ppc-arch.c
 CPPFLAGS += -no-cpp-precomp
 
 ifdef LISP_FEATURE_GENCGC
-  GC_SRC = gencgc.c
+  GC_SRC = fullcgc.c gencgc.c
 else
   GC_SRC = cheneygc.c
 endif
