@@ -20,7 +20,7 @@ OS_SRC = linux-os.c ppc-linux-os.c
 OS_LIBS = -ldl
 
 ifdef LISP_FEATURE_GENCGC
-  GC_SRC = gencgc.c
+  GC_SRC = fullcgc.c gencgc.c
 else
   GC_SRC = cheneygc.c
 endif
