@@ -20,7 +20,7 @@ ifdef LISP_FEATURE_SB_CORE_COMPRESSION
   OS_LIBS += -lz
 endif
 
-GC_SRC = gencgc.c
+GC_SRC = fullcgc.c gencgc.c
 
 # Nothing to do for after-grovel-headers.
 .PHONY: after-grovel-headers
