@@ -57,9 +57,9 @@ LINKFLAGS += -arch x86_64 -dynamic -twolevel_namespace -bind_at_load -pagezero_s
 CFLAGS += -arch x86_64 -fno-omit-frame-pointer
 
 ifdef LISP_FEATURE_IMMOBILE_SPACE
-  GC_SRC = gencgc.c traceroot.c marknsweepgc.c
+  GC_SRC = fullcgc.c gencgc.c traceroot.c marknsweepgc.c
 else
-  GC_SRC = gencgc.c traceroot.c
+  GC_SRC = fullcgc.c gencgc.c traceroot.c
 endif
 
 # Nothing to do for after-grovel-headers.
