@@ -18,7 +18,7 @@ ifdef LISP_FEATURE_SB_CORE_COMPRESSION
   OS_LIBS += -lz
 endif
 
-GC_SRC= gencgc.c traceroot.c
+GC_SRC= fullcgc.c gencgc.c traceroot.c
 
 # Nothing to do for after-grovel-headers.
 .PHONY: after-grovel-headers
