@@ -45,7 +45,7 @@ ifdef LISP_FEATURE_SB_CORE_COMPRESSION
   OS_LIBS += -lz
 endif
 
-GC_SRC = gencgc.c traceroot.c
+GC_SRC = fullcgc.c gencgc.c traceroot.c
 
 CFLAGS =  -g -W -Wall \
        -Wno-unused-function \
