@@ -47,7 +47,7 @@ ARCH_SRC = x86-arch.c
 
 CPPFLAGS += -no-cpp-precomp
 
-GC_SRC = gencgc.c traceroot.c
+GC_SRC = fullcgc.c gencgc.c traceroot.c
 
 .PHONY: after-grovel-headers
 
