@@ -43,7 +43,7 @@ ifdef LISP_FEATURE_SB_CORE_COMPRESSION
   OS_LIBS += -lz
 endif
 
-GC_SRC = gencgc.c traceroot.c
+GC_SRC = fullcgc.c gencgc.c traceroot.c
 
 CFLAGS = -g -Wall -O3 \
         -fno-omit-frame-pointer -march=i686 -DWINVER=0x0501 \
