@@ -218,6 +218,7 @@ void heap_scavenge(lispobj *start, lispobj *end)
 // that must not contain any object headers.
 sword_t scavenge(lispobj *start, sword_t n_words)
 {
+    gc_dcheck(compacting_p());
     lispobj *end = start + n_words;
     lispobj *object_ptr;
     for (object_ptr = start; object_ptr < end; object_ptr++) {
